--- a/app/Search/search.css
+++ b/app/Search/search.css
@@ -110,6 +110,12 @@
     line-height: 1.5;
 }
 
+.summary-title {
+    font-size: 1 rem;
+    font-weight: 500;
+    color: #111;
+    margin-bottom: 0.5rem;
+}
 
 @media (max-width: 600px) {
     .search-container {
